# motorcycle_dynamics_v3

./: README.md  chart.py  launch.md  main_frame_design.py  materials.json  references.md  roadmap.md
backend/: pyproject.toml
backend/app/: main.py  schemas.py  simulation.py  truss_solver.py
backend/designs/: akira_bike_project_phase1_side_v1.json  akira_bike_project_phase1_v2.json  akira_bike_project_phase1_v3.json  akira_bike_project_phase1_v4.json  simple_half_truss.json  simple_triangle.json  simple_triangle_v2.json  truss_bridge_example.json
backend/tests/: test_simulate.py
frame_design/: __init__.py  drawing.py  entities.py  frame_design_ui.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts  units.ts
frontend/src/components/: FrameCanvas.tsx
