[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "motorcycle-frame-sim-backend"
version = "0.1.0"
description = "FastAPI backend for 2D motorcycle frame beam simulation"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "../README.md"
keywords = ["fastapi", "structural-analysis", "beam", "motorcycle", "simulation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI",
  "Intended Audience :: Science/Research"
]

# Runtime & core scientific deps
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.0",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "pydantic==2.7.4"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "httpx==0.27.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
